--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,12 +35,11 @@
       rel="icon"
       sizes="76x76"
       type="image/png"
-      href="%PUBLIC_URL%/favicon.png"
+      href="%PUBLIC_URL%/gordian.png"
     />
     <link
-      rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
+      href="%PUBLIC_URL%/gordian.png"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -56,8 +55,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
       rel="stylesheet"
     />
-    <title>Black Dashboard React by Creative Tim</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    <title>Gordian</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
